TemperatureConversion/style.css
.page {
    font-family: Helvetica, Arial, sans-serif;
    background-color: #FFFCB4;
    height: 100%;
}

.content {
    margin: 0 auto;
    max-width: 400px;
    width: 100%;
}

.temperature-input-field {
    margin: 20px 10px;
}

.convert-button {
    display: block;
    background-color: #00F;
    color: #FFF;
    font-size: 15px;
    cursor: pointer;
}

.convert-button:hover {
    background-color: #378EF0;
}

.temperature-output {
    display: block;
}

.error-output {
    color: #F00;
}

.invalid {
    border: #F00 solid 1px;
}

.temperature-input-field, .convert-button {
    padding: 0 5px;
}

